очень-очень много изменений

--- a/grandtrip/public/index.html
+++ b/grandtrip/public/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="ru" style="overflow: none;">
 
 <head>
     <meta name="viewport" content="width=device-width" />
@@ -28,7 +28,7 @@
     </style>
 </head>
 
-<body style="font-family: Roboto, sans-serif; overflow-x: none">
+<body style="font-family: Roboto, sans-serif;">
     <div id="root"></div>
 </body>
 
