--- a/grandtrip/public/index.html
+++ b/grandtrip/public/index.html
@@ -8,6 +8,10 @@
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
     <script src="wwwroot/bootstrap.min.js"></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Bitter:wght@500;600;700;800&family=Fira+Sans+Condensed:ital,wght@1,800&family=Neucha&display=swap" rel="stylesheet">
+    <title>Готовые идеи для Вашей прогулки в GrandTrip!</title>
     <link href="wwwroot/custom.css" rel="stylesheet" type="text/css" />
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css" integrity="sha512-xodZBNTC5n17Xt2atTPuE1HxjVMSvLVW9ocqUKLsCC5CXdbqCmblAshOMAS6/keqq/sMZMZ19scR4PsZChSR7A==" crossorigin="" />
     <script src="https://unpkg.com/react@17/umd/react.development.js" crossorigin=""></script>
@@ -29,7 +33,7 @@
 </head>
 
 <body style="font-family: Roboto, sans-serif;">
-    <div id="root"></div>
+    <div id="root" style="height: 100%"></div>
 </body>
 
 </html>
